Fix Form Layout on Small Device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,9 @@ body {
 	align-items: center;
 	flex-direction: column;
 	vertical-align: middle;
-	border-radius: 10%;
+	border-radius: 50px;
 	box-shadow: 3px 3px 5px 1px rgba(0,0,0,0.2);
+	position: relative;
 }
 
 .forum input {
@@ -103,9 +104,10 @@ body {
 
 .forum-brand {
 	position: absolute;
-	top: 100px;
+	top: 5%;
 	color: #0ABCF7;
 	text-shadow: 0px 0px 3px black;
+	font-family: 'Righteous', cursive;
 }
 
 .button {
